--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-three/drei": "^9.106.0",
     "@react-three/fiber": "^8.16.8",
     "@tweenjs/tween.js": "^23.1.2",
+    "dotenv": "^16.4.5",
     "maath": "^0.10.7",
+    "mysql2": "^3.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
