--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
+    "emailjs-com": "^3.2.0",
     "maath": "^0.10.7",
     "mysql2": "^3.10.0",
     "nodemailer": "^6.9.13",
