--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@react-three/fiber": "^8.16.8",
     "@tweenjs/tween.js": "^23.1.2",
     "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
+    "jsonwebtoken": "^9.0.2",
     "maath": "^0.10.7",
     "mysql2": "^3.10.0",
     "nodemailer": "^6.9.13",
+    "razorpay": "^2.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
