--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "maath": "^0.10.7",
     "mysql2": "^3.10.0",
     "nodemailer": "^6.9.13",
