--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jwt-decode": "^4.0.0",
     "maath": "^0.10.7",
     "mysql2": "^3.10.0",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.13",
     "razorpay": "^2.9.4",
     "react": "^18.2.0",
