--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.4",
+    "@netlify/functions": "^2.8.0",
     "@react-three/drei": "^9.106.0",
     "@react-three/fiber": "^8.16.8",
     "@tweenjs/tween.js": "^23.1.2",
@@ -21,10 +22,12 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
+    "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "jwt-simple": "^0.5.6",
     "maath": "^0.10.7",
-    "mysql2": "^3.10.0",
+    "mysql2": "^3.10.2",
     "netlify-cli": "^17.27.0",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.14",
