--- a/netlify/package.json
+++ b/netlify/package.json
@@ -16,5 +16,8 @@
     "mysql2": "^3.11.0",
     "nodemailer": "^6.9.14",
     "razorpay": "^2.9.4"
+  },
+  "devDependencies": {
+    "serverless-plugin-split-stacks": "^1.13.0"
   }
 }
