--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,10 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.0",
     "nodemailer": "^6.9.14",
-    "razorpay": "^2.9.4"
+    "razorpay": "^2.9.4",
+    "serverless-offline": "^13.8.0"
   },
   "devDependencies": {
-    "serverless-offline": "^13.7.0",
     "serverless-plugin-split-stacks": "^1.13.0"
   }
 }
