--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.0",
     "nodemailer": "^6.9.14",
-    "razorpay": "^2.9.4",
-    "serverless-offline": "^13.8.0"
+    "razorpay": "^2.9.4"
   },
   "devDependencies": {
     "serverless-plugin-split-stacks": "^1.13.0"
