--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.1",
     "react-tilt": "^1.0.2",
+    "react-toastify": "^11.0.3",
     "three": "^0.165.0",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8"
