--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jwt-decode": "^4.0.0",
     "jwt-simple": "^0.5.6",
     "maath": "^0.10.7",
+    "mui-file-input": "^7.0.0",
     "netlify-cli": "^17.27.0",
     "node-fetch": "^3.3.2",
     "razorpay": "^2.9.4",
