--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@react-three/fiber": "^8.16.8",
     "@tweenjs/tween.js": "^23.1.2",
     "axios": "^1.7.2",
-    "html2canvas": "^1.4.1",
     "body-parser": "^1.20.2",
+    "bwip-js": "^4.7.0",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
     "formidable": "^3.5.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^4.0.0",
     "jwt-simple": "^0.5.6",
     "maath": "^0.10.7",
@@ -44,7 +46,6 @@
     "react-router-dom": "^6.23.1",
     "react-tilt": "^1.0.2",
     "react-toastify": "^11.0.3",
-    "jspdf": "^2.5.1",
     "three": "^0.165.0",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8"
